# cot-faithfulness-mech-interp

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  environment.yml  phase2_research_proposal.md  pyproject.toml  requirements.txt  todos.txt  vscode_colab_feedback.md
.github/workflows/: tests.yml
config/: experiment_config.yaml  model_config.yaml  paths_config.yaml
datasets/: dataset_card.md
datasets/gpt2_arithmetic/: README.md  dataset_extraction.py
docs/: PROJECT_STRUCTURE.md  TROUBLESHOOTING.md  demo_day_v2.pptx  phase1_findings.md
experiments/: phase1_circuit_discovery.ipynb  phase2_faithfulness_detection.ipynb
experiments/01_circuit_discovery/: contrastive_patching.ipynb  phase1_5_head_level.ipynb  phase1_circuit_discovery.ipynb  phase1_circuit_discovery_colab.ipynb
experiments/02_faithfulness_detection/: phase2_README.md  phase2_faithfulness_detector.ipynb  phase2_faithfulness_detector.py  phase2a_linear_probe.ipynb  phase2a_linear_probe.py  phase2b_steering_vector.ipynb  phase2b_steering_vector.py
modal_jobs/: phase2a_runner.py  phase2b_gemma_runner.py  phase2b_qwen_runner.py
phase1/: README.md
phase1/config/: model_config.yaml
results/phase2_faithfulness_detection/: Phase2b_intervention_fixed.ipynb  hybrid_vector.npy  probe_coefficients.npy
scripts/: dataset_extraction.py
shared/: __init__.py
shared/data/: __init__.py  loaders.py  pair_generator.py  tokenization.py
shared/patching/: __init__.py  contrastive.py  hooks.py  restoration.py
tests/: test_data_generation.py  test_patching.py  test_probing.py
(+42 files in other folders)
